After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751929 - rtpvp8depay: Ignore reserved bit in payload descriptor
rtpvp8depay: Ignore reserved bit in payload descriptor
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.5.2
Other Windows
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-03 21:09 UTC by Stian Selnes (stianse)
Modified: 2015-08-16 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch with fix (980 bytes, patch)
2015-07-03 21:09 UTC, Stian Selnes (stianse)
committed Details | Review

Description Stian Selnes (stianse) 2015-07-03 21:09:49 UTC
Created attachment 306778 [details] [review]
Patch with fix

Attached patch fixes an issue where VP8 depayloader will fail to start depayloading a frame if the reserved bit is 1. Although payloaders are currently required to set this bit to 0 depayloaders must also ignore this bit according to the RFC draft.

https://tools.ietf.org/html/draft-ietf-payload-vp8-16#section-4.2
Comment 1 Sebastian Dröge (slomo) 2015-07-06 09:04:18 UTC
commit d91ef9dcbf15f5efb22c366ff5dfb70efa39a08c
Author: Stian Selnes <stian@pexip.com>
Date:   Fri Jun 20 10:59:14 2014 +0200

    rtpv8depay: ignore reserved bit in payload descriptor
    
    Draft 16 of "RTP Payload Format for VP8" states in section 4.2 that:
    
    R: Bit reserved for future use.  MUST be set to zero and MUST be
       ignored by the receiver.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=751929